# GPT-SoVITS-v3-Streaming

./: .gitignore  README.md  inference.py  pyproject.toml  requirements.txt
GPT_SoVITS/: process_ckpt.py
GPT_SoVITS/AR/models/: t2s_model.py
GPT_SoVITS/TTS_infer_pack/: TTS.py
GPT_SoVITS/configs/: tts_infer.yaml
GPT_SoVITS/module/: core_vq.py
GPT_SoVITS/text/: japanese.py
GPT_SoVITS/tools/: audio_sr.py  my_utils.py
